# recipe-agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
data/: recipe_agent_test.db
src/recipe_agent/: __init__.py  __main__.py  agent.py  cli.py  model.py  observability.py  otel.py  prompts.py  streaming.py
src/recipe_agent/glossary/: terms.toml
src/recipe_agent/memory/: AGENTS.md
src/recipe_agent/skills/clickhouse-query/: SKILL.md
src/recipe_agent/skills/deep-query/: SKILL.md
src/recipe_agent/skills/recipe-compare/: SKILL.md
src/recipe_agent/subagents/: __init__.py  deep_query.py  recipe_compare.py
src/recipe_agent/tools/: __init__.py  clickhouse.py  glossary.py
src/recipe_agent/tools/clickhouse/: context.py  query.py
