[project]
name = "deepagent-cli-glm-example"
version = "0.1.0"
description = "Minimal DeepAgents CLI example with GLM/OpenAI-compatible model and stream_events(version='v3')."
requires-python = ">=3.11"
dependencies = [
    "arize-phoenix-otel>=0.16.0",
    "clickhouse-connect>=1.1.1",
    "deepagents>=0.6.0",
    "langchain>=1.3.2",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.0.1",
    "openinference-instrumentation-langchain>=0.1.66",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
]

[tool.uv]
package = false
